fix vertical overflow

--- a/pages/spotify/assets/css/style.css
+++ b/pages/spotify/assets/css/style.css
@@ -23,6 +23,7 @@ body {
     padding: 20px;
     position: relative;
     overflow: hidden;
+    overflow-y: auto;
 }
 
 body::before {
